$Id$


v0.91.9		16-May-2007

	general:
		Fixed building on FreeBSD, tested on 5.3

	mbsebbs:
		Fixed upload crash when a FILE_ID.DIZ is found but the bbs is
		not allowed to open for reading.

	mbfile:
		Help message displays quoted description.
		The adopt command works even if the description isn't quoted.

	mbsebbs:
		The filelist now displays long filenames (finally).

	mbpasswd:
		Added check for FreeBSD > 6.0 and use sysctl for security check.

	mbuseradd:
		Added check for FreeBSD > 6.0 and use sysctl for security check.


v0.91.8		26-Apr-2007 - 16-May-2007

	upgrade:
		Make sure mbtask is restarted.

	mbcico:
		Added mbtask command to update the MIB counters.

	mbfido:
		Added mbtask commands to update the MIB counters.
		Fixed mbfile import with too many description lines in
		files.bbs
		Fixed a buffer overflow when processing TIC files with a lot
		of garbage in it.

	mbnewusr:
		Fixed loading default language for new user.

	mbtask:
		Added SNMP MIB counters and added set commands to increase
		these new counters. Note, there is no SNMP interface yet.


v0.91.7		07-Mar-2007 - 26-Apr-2007

	mbselib:
		If find_rfc_charset doesn't find a valid characterset we log a
		warning instead of an error.
		Fixed some charset names using IANA information.
		Removed duplicate table column.

	mbfido:
		In rfc2ftn if we cannot find the incoming charset from the
		standard table we will fall back to the charset in the
		Content-type: header and try to initialize iconv with that
		value.
		For debug help to me, the headers Content-Type and
		Content-Transfer-Encoding are temporary stored in the fido
		message as kludges.

	mbindex:
		When the first Zone entry is missing in the nodelist, mbindex
		aborts with a fatal error and doesn't replace the nodelist
		index.
		Keep the latest 4 instead of 2 nodelists in the nodelist
		directory to allow a few weeks for recovery.

	mbdiff:
		Wrote a lf instead of eof character as last character in the
		new nodelist.